# sistemas-multiagente

./: .gitignore  README.md  pyproject.toml
Alternating Games/: KuhnPoker-finaldeprimente.ipynb  KuhnPoker-finalfeliz.ipynb  KuhnPoker.ipynb  KuhnPoker3PLayers.ipynb  Nocca_Nocca.ipynb  Nocca_Nocca_a.ipynb  TicTacToe.ipynb  plot_utils.py
Alternating Games/agents/: conterfactual_regretplus.py  counterfactual_regret.py  counterfactual_regret_copy.py  counterfactual_regret_sampling.py  eaeaea.cpp  ismcts.py  mcts_t.py
Alternating Games/analysis/: nocca.ipynb  tic_tac_toe.ipynb
Alternating Games/analysis/analisis_nocca/: mcts_vs_mcts_filtered.csv  mcts_vs_minimax_filtered.csv  mcts_vs_random_filtered.csv  (+1 more)
Alternating Games/hyperparameters/: NoccaNocca.ipynb  TicTacToe.ipynb
Simultaneous_Games/: 0_matching_pennies.ipynb  1_rock_paper_scissors.ipynb  2_blotto_12_soldiers.ipynb  2_blotto_13_soldiers.ipynb  2_blotto_6_soldiers.ipynb  FP.ipynb  RM.ipynb  Test.ipynb  agents.pkl  foraging.ipynb  foraging_experiments.ipynb
Simultaneous_Games/agents/: fictitious_play.py  fictitiousplay_t.py  independent_q_learning.py  regret_matching.py  regretmatching_t.py
Simultaneous_Games/base/: game.py
Simultaneous_Games/utilities/: utils.py
Stochastic Games/: 1_foraging_iql.ipynb  2_foraging_jalam.ipynb  3_foraging_jalam_iql.ipynb  4_foraging_iql_ra.ipynb  5_foraging_jalam_ra.ipynb  experiment_utils.py  foragin_book_example.ipynb  foraging copy.ipynb
Stochastic Games/agents/: centralized_q_learning.py  independent_q_learning.py  jal_am.py  random_agent.py
(+18 files in other folders)
