[project]
name = "sistemas-multiagente"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"

requires-python = ">=3.10, <3.13"
dependencies = [
    "numpy (>=2.2.5,<3.0.0)",
    "gymnasium (==0.28.1)",
    "pettingzoo (==1.24.3)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "lbforaging (>=2.0.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
